@@ -605,13 +605,14 @@ public abstract class Dialog extends Window {
 	 * @see #getCancelButton
 	 * @see #getOKButton()
 	 */
-	protected Button createButton(Composite parent, int id, String label, boolean defaultButton) {
+	protected Button createButton(Composite parent, int id, String label,
+			boolean defaultButton) {
 		// increment the number of columns in the button bar
 		((GridLayout) parent.getLayout()).numColumns++;
 		Button button = new Button(parent, SWT.PUSH);
 		button.setText(label);
 		button.setFont(JFaceResources.getDialogFont());
-		button.setData(Integer.valueOf(id));
+		button.setData(new Integer(id));
 		button.addSelectionListener(new SelectionAdapter() {
 			@Override
 			public void widgetSelected(SelectionEvent event) {
@@ -624,7 +625,7 @@ public abstract class Dialog extends Window {
 				shell.setDefaultButton(button);
 			}
 		}
-		buttons.put(Integer.valueOf(id), button);
+		buttons.put(new Integer(id), button);
 		setButtonLayoutData(button);
 		return button;
 	}
@@ -828,7 +829,7 @@ public abstract class Dialog extends Window {
 	 * @since 2.0
 	 */
 	protected Button getButton(int id) {
-		return buttons.get(Integer.valueOf(id));
+		return buttons.get(new Integer(id));
 	}
 
 	/**
